--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 .heightHero {
-  height: calc(100vh - 104px);
+  height: calc(100vh - 18px);
   /* background-color: green; */
+}
+
+.gradient-text {
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(90deg, #903aff 3.08%, #ff26b9 93.85%);
 }
